test/tests/stages/9_functions/valid/arguments_in_registers/param_shadows_local_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  int
  identifier(f)
  (
  int
  identifier(a)
  )
  ;
  return
  identifier(f)
  (
  identifier(a)
  )
  ;
  }
  int
  identifier(f)
  (
  int
  identifier(a)
  )
  {
  return
  identifier(a)
  *
  const int(2)
  ;
  }
