test/tests/stages/9_functions/invalid_parse/function_call_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  )
  {
  return
  const int(0)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  int
  identifier(a)
  )
  ;
  }
